# open-gl-impls

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: fragmentshader.glsl  vertexshader.glsl
src/: main.cpp
src-2d/: main.cpp
src-2d/shaderprogram/: program.cpp
src-2d/shaders/: vertexshader.glsl
src-2d/shapes/: square.cpp
src-2d/texture/: texturemanager.cpp
src-3d/: main.cpp
src-3d/shaderprogram/: program.cpp  program.hpp
src-3d/shaders/: fragmentshader.glsl  vertexshader.glsl
src-3d/texture/: texturemanager.hpp
src/shaderprogram/: program.cpp  program.hpp
src/shapes/: square.cpp  square.hpp
